--- a/.gitignore
+++ b/.gitignore
@@ -131,8 +131,8 @@ dmypy.json
 areas/
 data/
 inputs.csv/
-local data/
-tests/
+local_data/
+tests and backups/
 .cdsapirc
 self_col_meteorology.pkl
 self_image.pkl
